--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -24,10 +24,172 @@
             android:padding="3dp">
 
             <LinearLayout
+                android:id="@+id/ll_movie_header_with_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <com.floatingmuseum.mocloud.widgets.RatioImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    mocloud:image_ratio="0.56"
+                    tools:src="@drawable/default_fanart" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_movie_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/movie_title" />
+
+                        <TextView
+                            android:id="@+id/tv__movie_title_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            android:ellipsize="end"
+                            android:gravity="center"
+                            android:maxLines="2"
+                            tools:text="BATMAN" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_released_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/released" />
+
+                        <TextView
+                            android:id="@+id/tv_released_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            tools:text="December 10, 2010" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_runtime_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/run_time" />
+
+                        <TextView
+                            android:id="@+id/tv_runtime_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            tools:text="125 mins" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_language_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/language" />
+
+                        <TextView
+                            android:id="@+id/tv_language_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            tools:text="English" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_certification_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/certification"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/tv_certification_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            android:visibility="gone"
+                            tools:text="PG-13"
+                            tools:visibility="visible" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_genres_title_text_backdrop"
+                            style="@style/detail_title"
+                            android:layout_gravity="center"
+                            android:text="@string/genres"
+                            android:visibility="gone"
+                            tools:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/tv_genres_backdrop"
+                            style="@style/detail_content"
+                            android:layout_gravity="center"
+                            android:ellipsize="end"
+                            android:gravity="center"
+                            android:maxLines="2"
+                            android:visibility="gone"
+                            tools:text="adventure,animation,family"
+                            tools:visibility="visible" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/ll_movie_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="visible">
 
                 <com.floatingmuseum.mocloud.widgets.RatioImageView
                     android:id="@+id/poster"
@@ -93,19 +255,22 @@
                         android:id="@+id/tv_certification_title_text"
                         style="@style/detail_title"
                         android:text="@string/certification"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_certification"
                         style="@style/detail_content"
                         android:visibility="gone"
-                        tools:text="PG-13" />
+                        tools:text="PG-13"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_genres_title_text"
                         style="@style/detail_title"
                         android:text="@string/genres"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tv_genres"
@@ -114,7 +279,8 @@
                         android:gravity="center"
                         android:maxLines="2"
                         android:visibility="gone"
-                        tools:text="adventure,animation,family" />
+                        tools:text="adventure,animation,family"
+                        tools:visibility="visible" />
                 </LinearLayout>
 
             </LinearLayout>
